input out of view fix

--- a/src/styles/Message.css
+++ b/src/styles/Message.css
@@ -99,6 +99,7 @@
   display: flex;
   padding: 10px;
   border-top: var(--border);
+  margin-bottom: 30px;
 }
 .msger-inputarea * {
   padding: 10px;
